# online-human-pose-classification

./: .gitignore  PoseEstimation.py  README.md  online_pose_classification.py
config/: pose.yml  yaml_usage_example.py
kps_extraction/: Openvino.py  data_handler.py
model/: Openvino.py
pose_classification/: pose_classifier.py  train_random_forest.py
pose_classification/weights/: test.pkl
ros/online_pose_classification/: CMakeLists.txt  package.xml
ros/online_pose_classification/scripts/: pose_classification_node.py
scripts/: PoseEstimation.py  confusion_matrix.py  data_collector.py  data_parser.py  load_model.py  random_forest.py  test.pkl
scripts/output/: pose.txt
scripts/ros/: data_collector.py  openpose_node.py
scripts/utils/: confusion_matrix.py  data_parser.py  load_model.py
test_tools/: confusion_matrix.py  load_model.py
train/: random_forest.py
utils/: data_handler.py
weights/: test.pkl
